tests/NormalTests/paczka1/small_fuzzy/35313542.err
Error in line 2: ppb8J S916 71,0
Error in line 13: sxsYKDO S111 27,7
Error in line 14: sxsYKDO A325 66,6
